add some more text and refs to ch4

--- a/references.bib
+++ b/references.bib
@@ -554,6 +554,26 @@
    url = {http://www.rand.org/pubs/papers/P923.html},
 }
 
+=== From http://dl.acm.org/citation.cfm?id=313926 ===
+@inproceedings{frigioni1996dynamicsinglesource,
+   author = {Frigioni, Daniele and Marchetti-Spaccamela, Alberto
+      and Nanni, Umberto},
+   title = {Fully Dynamic Output Bounded Single Source Shortest Path
+      Problem},
+   booktitle = {Proceedings of the Seventh Annual ACM-SIAM Symposium
+      on Discrete Algorithms},
+   series = {SODA '96},
+   year = {1996},
+   isbn = {0-89871-366-8},
+   location = {Atlanta, Georgia, USA},
+   pages = {212--221},
+   numpages = {10},
+   url = {http://dl.acm.org/citation.cfm?id=313852.313926},
+   acmid = {313926},
+   publisher = {Society for Industrial and Applied Mathematics},
+   address = {Philadelphia, PA, USA},
+}
+
 === From http://dl.acm.org/citation.cfm?id=338900 ===
 @article{frigioni2000dynamicsp,
    author = {Frigioni, Daniele and Marchetti-Spaccamela, Alberto
@@ -1065,6 +1085,17 @@
    doi = {10.1109/ROBOT.1985.1087247},
 }
 
+=== From http://cs.brown.edu/~pnk/bibtex.html ===
+@article{klein1998planardynamicshort,
+   author = {Klein and Subramanian},
+   title = {A Fully Dynamic Approximation Scheme for Shortest
+      Paths in Planar Graphs},
+   journal = {Algorithmica},
+   volume = {22},
+   pages = {235--249},
+   year = {1998},
+}
+
 === From http://journals.cambridge.org/action/displayAbstract?aid=4506516 ===
 @article{koditschek1994assembly,
    author = {Koditschek, Daniel E.},
@@ -1332,6 +1363,25 @@
    year = {2004},
    publisher = {MIT Press},
    url = {http://papers.nips.cc/paper/2382-ara-anytime-a-with-provable-bounds-on-sub-optimality.pdf}
+}
+
+=== From dl.acm.org ===
+@article{linchang1991dynamicsp,
+   author = {Lin, Chih-Chung and Chang, Ruei-Chuan},
+   title = {On the Dynamic Shortest Path Problem},
+   journal = {J. Inf. Process.},
+   issue_date = {1990},
+   volume = {13},
+   number = {4},
+   month = apr,
+   year = {1991},
+   issn = {0387-6101},
+   pages = {470--476},
+   numpages = {7},
+   url = {http://dl.acm.org/citation.cfm?id=105582.105591},
+   acmid = {105591},
+   publisher = {Information Processing Society of Japan},
+   address = {Tokyo, Japan},
 }
 
 @article{lozanoperezwedley1979collisionfree,
@@ -1864,6 +1914,20 @@
    acmid = {322004},
    publisher = {ACM},
    address = {New York, NY, USA},
+}
+
+=== From http://epubs.siam.org/doi/abs/10.1137/0204032 ===
+@article{spirapan1975updatingsp,
+   author = {P. M. Spira and A. Pan},
+   title = {On Finding and Updating Spanning Trees and Shortest Paths},
+   journal = {SIAM Journal on Computing},
+   volume = {4},
+   number = {3},
+   pages = {375--380},
+   year = {1975},
+   doi = {10.1137/0204032},
+   URL = {http://dx.doi.org/10.1137/0204032},
+   eprint = {http://dx.doi.org/10.1137/0204032},
 }
 
 === From IEEE Xplore ===
