--- a/thesis.tex
+++ b/thesis.tex
@@ -1,9 +1,7 @@
 \documentclass[nobib]{tufte-book}
 
 % marginfigure textwidth is 144.0pt = 5.0610cm
-\usepackage{natbib}
-
-\usepackage{natbib}
+%\usepackage{natbib}
 
 \usepackage{standalone}
 
@@ -249,11 +247,11 @@ We also provide open-source implementations of our algorithms.
 
 % \tableofcontents
 
-%\include{thesis-ch01-intro}
-%\include{thesis-ch02-roadmaps}
+\include{thesis-ch01-intro}
+\include{thesis-ch02-roadmaps}
 %\include{thesis-ch03-lazysp}
 \include{thesis-ch04-ibid}
-%\include{thesis-ch05-lemur}
+\include{thesis-ch05-lemur}
 %\include{thesis-ch06-family}
 
 \appendix
